# scrap

./: Cargo.toml
src/common/: x11.rs
src/x11/: capturer.rs  display.rs  iter.rs  server.rs
