[package]
name = "scrap"
description = "Screen capture made easy."
version = "0.5.0"
repository = "https://github.com/quadrupleslap/scrap"
documentation = "https://docs.rs/scrap"
keywords = ["screen", "capture", "record"]
license = "MIT"
authors = ["Ram <quadrupleslap@gmail.com>"]

[dependencies]
cfg-if = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[target.'cfg(macos)'.dependencies]
block = "0.1"

[dev-dependencies]
repng = "0.2"
